--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
+    "dotenv": "^8.2.0",
     "framer-motion": "^4.1.4",
     "gatsby": "^3.2.1",
     "gatsby-plugin-image": "^1.2.0",
@@ -24,7 +25,9 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.0",
     "gatsby-plugin-styled-components": "^4.2.0",
+    "gatsby-source-contentful": "^5.3.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
