refactorized + query error

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 GATSBY_CONTENTFUL_API=z8Cz1C15zKjqIi4dENCWOTZWHUDjHaHeVp1dueJiTYM
+GOOGLE_SITE_VERIFICATION=r4D84aKED3g2-coyMmr7B3HW6Ml-BBSwGYRSRlVT1pY
