--- a/package.json
+++ b/package.json
@@ -15,25 +15,30 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.9",
-    "babel-plugin-styled-components": "^1.12.0",
-    "dotenv": "^8.2.0",
-    "framer-motion": "^4.1.4",
-    "gatsby": "^3.2.1",
-    "gatsby-plugin-image": "^1.2.0",
-    "gatsby-plugin-manifest": "^3.2.0",
-    "gatsby-plugin-react-helmet": "^4.2.0",
-    "gatsby-plugin-sharp": "^3.2.0",
+    "@types/styled-components": "^5.1.13",
+    "babel-plugin-styled-components": "^1.13.2",
+    "dotenv": "^10.0.0",
+    "framer-motion": "^4.1.17",
+    "gatsby": "^3.12.1",
+    "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-image": "^1.12.0",
+    "gatsby-plugin-manifest": "^3.12.0",
+    "gatsby-plugin-react-helmet": "^4.12.0",
+    "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-styled-components": "^4.2.0",
-    "gatsby-source-contentful": "^5.3.0",
-    "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.12.0",
+    "gatsby-source-contentful": "^5.12.0",
+    "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-remark": "^4.0.0",
-    "gatsby-transformer-sharp": "^3.2.0",
+    "gatsby-transformer-sharp": "^3.12.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.3",
+    "react-side-effect": "^2.1.1",
+    "styled-components": "^5.3.1",
     "uuid": "^3.4.0"
+  },
+  "devDependencies": {
+    "gatsby-plugin-tsconfig-paths": "^1.0.3"
   }
 }
